# bsuir_c

./: .gitignore  CMakeLists.txt
Lab1/: Lab2_1.cpp  Lab2_2.cpp  Lab2_3.cpp  Lab2_4.cpp  Lab2_5.cpp
Lab2/: lab.cpp
Lab3/: Lab3_1.cpp  Lab3_2(1).cpp  Lab3_2(2).cpp  Lab3_2(3).cpp
Lab4/: Lab4_1(not function).cpp  Lab4_1.cpp  Lab4_1.h  Lab4_2.cpp  Lab4_2.h
Lab5/: Lab5_1.cpp
Lab6_Cpp/: CMakeLists.txt  main.cpp
